clusters/on-prem/core/longhorn-system/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: longhorn-ingress
    namespace: longhorn-system
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:sGM8Bi0Wdhrh2bC+8wiGuWOkbhkAlrHFVg==,iv:MYqvPpcDfv/lkI/HoVm7hYyQ4OQTWgZodViYefzZDSA=,tag:LXhEnF/Y3+J79gMNdBqFZA==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:gAfECE8D+eXe8eJuALNURJnMBNrhiM/NFg==,iv:8oPdEYlkyVkH7JGVyhN8XBDdtYeDNeek2HTg1sKS+kU=,tag:922NAUzPUCy+kZyMo+DshA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: longhorn-frontend
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMNStqdWtNb01MZCtsa2Ir
[...]
            AwvBYA2k9Fgna64vsTyjKEiwtPwshS8bomQLKFgfg8dDT1dU5zooUQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-17T06:02:57Z"
    mac: ENC[AES256_GCM,data:F50iLwnokitJepN7pdLMiZGpxhVnjn1GKv4GW76FXCUj+RSlfgk6YpflpLf+fvgPaJO3CVy9qT6tbSYZtUXVjhkH2ZiVqWMVXPTPZ03S1cjPf3ZFD5SkpISQxxljiPFkcGaqdZWtp7CKliKToMzFyXxA7Opg3T+6PkhHeYBPZIY=,iv:lfpkTVPE8DCwvo4lI25D6n0F7ZlbCmoA43WyOJfHEGE=,tag:pCKs61Nsl01Buhp/iucFMw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.7.3
